# food_app_project

./: .env  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
food_app_project/: asgi.py  settings.py  urls.py  wsgi.py
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py
mainapp/templates/: home.html
