[tool.poetry]
name = "food_app_project"
version = "0.1.0"
description = "this a a food application porject"
authors = ["liu chiko"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
